2009-11-06  Ian Beckwith  <ianb@erislabs.net>

	* examples/uzbl_load_url_from_surfraw:
	  + Applied patch from Sumant Oemrawsingh to strip "GLOBAL ELVI"
	    and "LOCALELVI" and support vertical menus if patched dmenu is
	    available.
	  + present_menu(): use awk(1) instead of cut(1), so tabs in
	    bookmark files are handled correctly.
	  + Add '.IN' suffix and dependency so correct value of @AWK@
	    is picked up from ./configure.

2009-10-27  Ian Beckwith  <ianb@erislabs.net>

	* Added examples/uzbl_load_url_from_surfraw,
	  thanks to Sumant Oemrawsingh.
	* Updated uzbl_load_url_from_surfraw to use new bookmark locations.
	* Fixed debsec (Thanks to Moritz Muehlenhoff, for this
	  and all his other work).
	* Fixed cia.
	* Fixed tests: aur, debpts, lastfm.
	* Added -o | -o=FILE option, to fetch URL and dump to
	  stdout or FILE.
	* test/Makefile.am: add debvcsbrowse.test to EXTRA_DIST
	* Makefile.am: install-data-hook: remove execute flag
	  from generated files surfraw.conf, elvi.1sr & surfraw.1.

2009-10-20  Ian Beckwith  <ianb@erislabs.net>

	* Move config files to follow XDG basedir spec
	  (http://standards.freedesktop.org/basedir-spec/basedir-spec-0.6.html)
	  Global config files are searched for in:
	  + $SURFRAW_global_conf if set.
	  + $XDG_CONFIG_DIRS/surfraw/{conf,bookmarks}
	    ($XDG_CONFIG_DIRS is $PATH-style colon separated list)
	  + @sysconfdir@/xdg/surfraw/{conf,bookmarks}
	    (@sysconfdir@ is usually /etc or /usr/local/etc/)
	  + @sysconfdir@/surfraw.{conf,bookmarks}
	    (for backwards compatibility)
	  Local config files & elvi are searched for in:
	  + $SURFRAW_conf if set (for per-user conf file only)
	    (no longer set by default config files)
	  + $XDG_CONFIG_HOME/surfraw/{conf,bookmarks,elvi/}
	  + $HOME/.config/surfraw/{conf,bookmarks,elvi/}
	  + $HOME/.surfraw.{conf,bookmarks}
	    (for backwards compatibility).

2009-10-18  Ian Beckwith  <ianb@erislabs.net>

	* Apply patch from James Rowe: