@@ -1,0 +1,7 @@
+noinst_SCRIPTS = uzbl_load_url_from_surfraw
+EXTRA_DIST     = README uzbl_load_url_from_surfraw.IN
+CLEANFILES     = examples/uzbl_load_url_from_surfraw
+
+uzbl_load_url_from_surfraw: uzbl_load_url_from_surfraw.IN
+
+include $(top_srcdir)/Makefile.include
